# libsrt

./: .gitignore  Cargo.toml  rustfmt.toml
src/: buffer.rs  lib.rs  serialize.rs  subtitle.rs  subtitle_iterator.rs
src/parser/: error.rs  event.rs  mod.rs  parse_duration.rs  parser.rs  state.rs
src/text/: mod.rs  text.rs
src/text/attributes/: attribute.rs  attributes.rs  color.rs  error.rs  mod.rs
src/text/tags/: error.rs  mod.rs  parsed_tag.rs
src/utils/: collect_arrays.rs  lines.rs  mod.rs  pattern.rs  span.rs  spannable.rs  spanned.rs  split.rs  split_iter.rs  split_iter_n.rs
tests/: parser_01.rs  parser_02.rs  parser_03.rs
